Fix database rename users to accounts
